2010-03-18  David Hyatt  <hyatt@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=36283
        
        The wrong constants were being used for the code that attempted to compact the background-repeat shorthand to
        a single value.

        Added fast/backgrounds/background-repeat-computed-style.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::fillRepeatToCSSValue):

2010-03-18  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=36271
        CSS3 :enabled on an input type=hidden element fails
        
        The CSS3 selectors spec now makes it clear that hidden inputs should respect
        the :enabled and :disabled pseudo-classes.

        Test: fast/forms/hidden-input-enabled.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector): Remove checks for hidden inputs.

2010-03-18  Enrica Casucci  <enrica@apple.com>

        Reviewed by Simon Fraser.

        Intro text at Star Wars demo is clipped.
        <rdar://problem/7560979>
        https://bugs.webkit.org/show_bug.cgi?id=33909
        
        Test: compositing/repaint/layer-repaint.html
        
        We are flipping the coordinates for drawing, therefore
        we must flip them also when we invalidate the rectangles.

        * platform/graphics/win/GraphicsLayerCACF.cpp:
        (WebCore::WebLayer::setNeedsDisplay):

2010-03-18  Nate Chapin  <japhet@chromium.org>

        Unreviewed, Chromium build fix.

        Missed a #include in V8Collection.h.

        * bindings/v8/V8Collection.h:

2010-03-18  David Hyatt  <hyatt@apple.com>

        Reviewed by Simon Fraser.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=36284.
        
        Make sure the CSS parser properly rejects negative border widths.

        Added fast/borders/negative-border-width.html

        * css/CSSParser.cpp: