@@ -60,6 +60,16 @@ using WebCore::V8GCController;
 using WebCore::V8Proxy;
 using WebCore::WrapperTypeInfo;
 
+namespace WebCore {
+
+WrapperTypeInfo* npObjectTypeInfo()
+{
+    static WrapperTypeInfo typeInfo = { 0, 0, false };
+    return &typeInfo;
+}
+
+}
+
 // FIXME: Comments on why use malloc and free.
 static NPObject* allocV8NPObject(NPP, NPClass*)
 {
@@ -116,7 +126,7 @@ NPObject* npCreateV8ScriptObject(NPP npp, v8::Handle<v8::Object> object, WebCore
     // Check to see if this object is already wrapped.
     if (object->InternalFieldCount() == npObjectInternalFieldCount) {
         WrapperTypeInfo* typeInfo = static_cast<WrapperTypeInfo*>(object->GetPointerFromInternalField(WebCore::v8DOMWrapperTypeIndex));
-        if (typeInfo == &WebCore::npObjectTypeInfo) {
+        if (typeInfo == WebCore::npObjectTypeInfo()) {
 
             NPObject* returnValue = v8ObjectToNPObject(object);
             _NPN_RetainObject(returnValue);
