@@ -48,8 +48,8 @@ namespace WebCore {
     class DOMWindow;
 
     static const int npObjectInternalFieldCount = v8DefaultWrapperInternalFieldCount + 0;
-    
-    static WrapperTypeInfo npObjectTypeInfo = { 0, 0, false };
+
+    WrapperTypeInfo* npObjectTypeInfo();
 }
 
 extern NPClass* npScriptObjectClass;
